# switchboard-relay

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: README.md
packaging/homebrew/: switchboard-relay.rb  switchboard.rb
scripts/: update-tap.sh
src/switchboard/: __init__.py  server.py  store.py
src/switchboard_relay/: __init__.py  board.py  server.py  store.py
tests/: conftest.py
tests/feature/: test_cli.py  test_server.py
tests/integration/: test_integration.py  test_stdio_subprocess.py  test_stress_exactly_once.py
tests/unit/: test_board.py  test_store.py
