[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switchboard-relay"
version = "0.2.2"
description = "A local MCP server that gives independent Claude Code sessions a shared, durable messaging channel."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mgd43b" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "claude-code",
    "messaging",
    "inter-session",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Official MCP Python SDK (provides FastMCP). Cap below 2.0: the v2 alpha
    # reorganizes `mcp.server.fastmcp` and would break these imports.
    "mcp>=1.9,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
dev = [
    "switchboard-relay[test]",
    "ruff>=0.9",
]

[project.scripts]
switchboard-relay = "switchboard_relay.server:main"

[project.urls]
Homepage = "https://github.com/mgd43b/switchboard-relay"
Repository = "https://github.com/mgd43b/switchboard-relay"
Issues = "https://github.com/mgd43b/switchboard-relay/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/switchboard_relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --cov=switchboard_relay --cov-report=term-missing --cov-fail-under=95"
markers = [
    "unit: pure component tests (the store in isolation)",
    "feature: tool/feature behavior through the server layer (no transport)",
    "integration: tools driven over a real MCP transport, incl. cross-process",
]

[tool.coverage.run]
source = ["switchboard_relay"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
# UP007/UP045 would rewrite Optional[int] -> int | None on tool signatures.
# Those annotations are consumed by pydantic/FastMCP to build the tool schema;
# the union form works, but keep the change out of scope here to avoid churn.
ignore = ["UP007", "UP045"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert-heavy, occasionally long lines; keep them readable.
"tests/**" = ["E501"]
